# fama-french-factor-replication

./: .gitignore  AGENTS.md  README.md  ff_factor_replication.ipynb  pyproject.toml  requirements.txt
data/: README.md
tests/: test_notebook_smoke.py
